# StreamedFetch

./: .gitattributes  .gitignore  .gitmodules  .rubocop.yml  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md  rakefile
StreamedFetch/: CMakeLists.txt
StreamedFetch/docs/: Namespaces.hpp
StreamedFetch/src/StreamedFetch/: Test.cpp
StreamedFetch/src/StreamedFetch/Client/: ClientBase.cpp  ClientBase.hpp  Fetch.cpp  Fetch.hpp  SimpleFetch.cpp  SimpleFetch.hpp
StreamedFetch/src/StreamedFetch/Infos/: IClientInfo.hpp  Infos.cpp  Infos.hpp
StreamedFetch/src/StreamedFetch/Options/: ClientOption.cpp  ClientOption.hpp  HttpMethods.cpp  HttpMethods.hpp  IClientOption.cpp  IClientOption.hpp
TestApp/: CMakeLists.txt
TestApp/src/: CMakeLists.txt  Main.cpp
rake/: config.rb  dependencies.rb  documentation.rb  vcpkg_utils.rb
test-server/: .rubocop_todo.yml  .solargraph.yml  Gemfile  Rakefile  main.rb
test-server/.bundle/: config
test-server/config/: application.rb  credentials.yml.enc  master.key
test-server/config/environments/: production.rb
